Fixing incorrect X axis display in the forest plot
	- Increased the X axis dynamic minimum and maximum limits
	for the forest plot. Now values near the limits can be
	correctly seen
	- Fixed an incorrect opacity logic that was making the
	wrong ticks go invisible in the forest plot X axis
	- Closes #522

--- a/src/app/genes/gene-overview/evidence-menu/rna/gene-rnaseq-de/gene-rnaseq-de.component.scss
+++ b/src/app/genes/gene-overview/evidence-menu/rna/gene-rnaseq-de/gene-rnaseq-de.component.scss
@@ -10,6 +10,8 @@
 }
 
 .rna-seq-me {
+    padding-bottom: 4em;
+
     .fa-info-circle:before {
         color: #9DA3B3;
     }
